--- a/gui/cugs_mainwindow.ui
+++ b/gui/cugs_mainwindow.ui
@@ -223,7 +223,18 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QComboBox" name="combo_serial"/>
+                     <widget class="QComboBox" name="combo_serial">
+                      <item>
+                       <property name="text">
+                        <string/>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>[Simulation Mode]</string>
+                       </property>
+                      </item>
+                     </widget>
                     </item>
                     <item>
                      <widget class="QLabel" name="label_2">
@@ -674,21 +685,6 @@
                  <enum>QFrame::Raised</enum>
                 </property>
                 <layout class="QHBoxLayout" name="horizontalLayout_4">
-                 <property name="spacing">
-                  <number>0</number>
-                 </property>
-                 <property name="leftMargin">
-                  <number>20</number>
-                 </property>
-                 <property name="topMargin">
-                  <number>0</number>
-                 </property>
-                 <property name="rightMargin">
-                  <number>20</number>
-                 </property>
-                 <property name="bottomMargin">
-                  <number>0</number>
-                 </property>
                  <item>
                   <widget class="QFrame" name="fr_cb_write">
                    <property name="frameShape">
@@ -738,38 +734,69 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QPushButton" name="btn_start_mission">
-                   <property name="minimumSize">
-                    <size>
-                     <width>90</width>
-                     <height>90</height>
-                    </size>
+                  <widget class="QFrame" name="frame">
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
                    </property>
-                   <property name="maximumSize">
-                    <size>
-                     <width>120</width>
-                     <height>90</height>
-                    </size>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
                    </property>
-                   <property name="font">
-                    <font>
-                     <pointsize>10</pointsize>
-                     <weight>75</weight>
-                     <bold>true</bold>
-                    </font>
-                   </property>
-                   <property name="cursor">
-                    <cursorShape>PointingHandCursor</cursorShape>
-                   </property>
-                   <property name="text">
-                    <string>Start Mission</string>
-                   </property>
-                   <property name="checkable">
-                    <bool>true</bool>
-                   </property>
-                   <property name="checked">
-                    <bool>false</bool>
-                   </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_29">
+                    <item>
+                     <widget class="QLabel" name="lb_max_plot">
+                      <property name="font">
+                       <font>
+                        <pointsize>10</pointsize>
+                       </font>
+                      </property>
+                      <property name="text">
+                       <string>Number of Data in Plots</string>
+                      </property>
+                      <property name="alignment">
+                       <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QComboBox" name="combo_max_plot">
+                      <item>
+                       <property name="text">
+                        <string>80</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>20</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>50</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>100</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>120</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>150</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>Unlimited</string>
+                       </property>
+                      </item>
+                     </widget>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                 </layout>
@@ -943,10 +970,10 @@
                     <cursorShape>PointingHandCursor</cursorShape>
                    </property>
                    <property name="text">
-                    <string>Pause Data</string>
+                    <string>None</string>
                    </property>
                    <property name="checkable">
-                    <bool>true</bool>
+                    <bool>false</bool>
                    </property>
                    <property name="checked">
                     <bool>false</bool>
